--- a/app/data/NFL/notebook.ipynb
+++ b/app/data/NFL/notebook.ipynb
@@ -1298,8 +1298,298 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "id": "5514c4cd",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import pandas as pd\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 2,
+   "id": "d324b41d",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "(4709, 74)"
+      ]
+     },
+     "execution_count": 2,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "path = \"nfl_games_data_history.csv\"\n",
+    "df = pd.read_csv(path)\n",
+    "df.shape"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 6,
+   "id": "594b7e62",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "(15, 74)"
+      ]
+     },
+     "execution_count": 6,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "filtered_df = df[\n",
+    "    (df['home_team_name'] == 'Pittsburgh Steelers') & (df['away_team_name'] == 'Carolina Panthers') |\n",
+    "    (df['away_team_name'] == 'Pittsburgh Steelers') & (df['home_team_name'] == 'Carolina Panthers')\n",
+    "]\n",
+    "filtered_df.shape"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 12,
+   "id": "77b7e7c2",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>home_team_name</th>\n",
+       "      <th>away_team_name</th>\n",
+       "      <th>home_total_score</th>\n",
+       "      <th>away_total_score</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>53</th>\n",
+       "      <td>Pittsburgh Steelers</td>\n",
+       "      <td>Carolina Panthers</td>\n",
+       "      <td>19</td>\n",
+       "      <td>3</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>271</th>\n",
+       "      <td>Pittsburgh Steelers</td>\n",
+       "      <td>Carolina Panthers</td>\n",
+       "      <td>27</td>\n",
+       "      <td>3</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>368</th>\n",
+       "      <td>Carolina Panthers</td>\n",
+       "      <td>Pittsburgh Steelers</td>\n",
+       "      <td>17</td>\n",
+       "      <td>33</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>682</th>\n",
+       "      <td>Pittsburgh Steelers</td>\n",
+       "      <td>Carolina Panthers</td>\n",
+       "      <td>17</td>\n",
+       "      <td>16</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>987</th>\n",
+       "      <td>Carolina Panthers</td>\n",
+       "      <td>Pittsburgh Steelers</td>\n",
+       "      <td>25</td>\n",
+       "      <td>10</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1304</th>\n",
+       "      <td>Pittsburgh Steelers</td>\n",
+       "      <td>Carolina Panthers</td>\n",
+       "      <td>0</td>\n",
+       "      <td>10</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1356</th>\n",
+       "      <td>Carolina Panthers</td>\n",
+       "      <td>Pittsburgh Steelers</td>\n",
+       "      <td>19</td>\n",
+       "      <td>37</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1625</th>\n",
+       "      <td>Pittsburgh Steelers</td>\n",
+       "      <td>Carolina Panthers</td>\n",
+       "      <td>6</td>\n",
+       "      <td>23</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1935</th>\n",
+       "      <td>Carolina Panthers</td>\n",
+       "      <td>Pittsburgh Steelers</td>\n",
+       "      <td>18</td>\n",
+       "      <td>6</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2254</th>\n",
+       "      <td>Carolina Panthers</td>\n",
+       "      <td>Pittsburgh Steelers</td>\n",
+       "      <td>14</td>\n",
+       "      <td>17</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2570</th>\n",
+       "      <td>Pittsburgh Steelers</td>\n",
+       "      <td>Carolina Panthers</td>\n",
+       "      <td>39</td>\n",
+       "      <td>24</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2705</th>\n",
+       "      <td>Pittsburgh Steelers</td>\n",
+       "      <td>Carolina Panthers</td>\n",
+       "      <td>52</td>\n",
+       "      <td>21</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2884</th>\n",
+       "      <td>Carolina Panthers</td>\n",
+       "      <td>Pittsburgh Steelers</td>\n",
+       "      <td>25</td>\n",
+       "      <td>19</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3448</th>\n",
+       "      <td>Carolina Panthers</td>\n",
+       "      <td>Pittsburgh Steelers</td>\n",
+       "      <td>34</td>\n",
+       "      <td>9</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3973</th>\n",
+       "      <td>Carolina Panthers</td>\n",
+       "      <td>Pittsburgh Steelers</td>\n",
+       "      <td>16</td>\n",
+       "      <td>24</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "           home_team_name       away_team_name  home_total_score  \\\n",
+       "53    Pittsburgh Steelers    Carolina Panthers                19   \n",
+       "271   Pittsburgh Steelers    Carolina Panthers                27   \n",
+       "368     Carolina Panthers  Pittsburgh Steelers                17   \n",
+       "682   Pittsburgh Steelers    Carolina Panthers                17   \n",
+       "987     Carolina Panthers  Pittsburgh Steelers                25   \n",
+       "1304  Pittsburgh Steelers    Carolina Panthers                 0   \n",
+       "1356    Carolina Panthers  Pittsburgh Steelers                19   \n",
+       "1625  Pittsburgh Steelers    Carolina Panthers                 6   \n",
+       "1935    Carolina Panthers  Pittsburgh Steelers                18   \n",
+       "2254    Carolina Panthers  Pittsburgh Steelers                14   \n",
+       "2570  Pittsburgh Steelers    Carolina Panthers                39   \n",
+       "2705  Pittsburgh Steelers    Carolina Panthers                52   \n",
+       "2884    Carolina Panthers  Pittsburgh Steelers                25   \n",
+       "3448    Carolina Panthers  Pittsburgh Steelers                34   \n",
+       "3973    Carolina Panthers  Pittsburgh Steelers                16   \n",
+       "\n",
+       "      away_total_score  \n",
+       "53                   3  \n",
+       "271                  3  \n",
+       "368                 33  \n",
+       "682                 16  \n",
+       "987                 10  \n",
+       "1304                10  \n",
+       "1356                37  \n",
+       "1625                23  \n",
+       "1935                 6  \n",
+       "2254                17  \n",
+       "2570                24  \n",
+       "2705                21  \n",
+       "2884                19  \n",
+       "3448                 9  \n",
+       "3973                24  "
+      ]
+     },
+     "execution_count": 12,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "filtered_df[['home_team_name', 'away_team_name', 'home_total_score', 'away_total_score']]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 13,
+   "id": "aeeb5ae5",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Pittsburgh Steelers wins: 9\n",
+      "Carolina Panthers wins: 6\n"
+     ]
+    }
+   ],
+   "source": [
+    "# Initialize win counters\n",
+    "steelers_wins = 0\n",
+    "panthers_wins = 0\n",
+    "\n",
+    "# Iterate through each row\n",
+    "for _, row in filtered_df.iterrows():\n",
+    "    home_team = row['home_team_name']\n",
+    "    away_team = row['away_team_name']\n",
+    "    home_score = row['home_total_score']\n",
+    "    away_score = row['away_total_score']\n",
+    "\n",
+    "    if home_score > away_score:\n",
+    "        winner = home_team\n",
+    "    elif away_score > home_score:\n",
+    "        winner = away_team\n",
+    "    else:\n",
+    "        winner = 'Draw'  # Optional, if you want to track ties\n",
+    "\n",
+    "    if winner == 'Pittsburgh Steelers':\n",
+    "        steelers_wins += 1\n",
+    "    elif winner == 'Carolina Panthers':\n",
+    "        panthers_wins += 1\n",
+    "\n",
+    "# Display results\n",
+    "print(f\"Pittsburgh Steelers wins: {steelers_wins}\")\n",
+    "print(f\"Carolina Panthers wins: {panthers_wins}\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "54cb5672",
    "metadata": {},
    "outputs": [],
    "source": []
@@ -1307,7 +1597,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "GameAIAPI",
+   "display_name": "GameAIAPI (3.13.7)",
    "language": "python",
    "name": "python3"
   },
@@ -1321,7 +1611,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.12.11"
+   "version": "3.13.7"
   }
  },
  "nbformat": 4,
